cmake_minimum_required(VERSION 3.24)
project(Project2)

set(CMAKE_CXX_STANDARD 14)

include_directories(Controller_AI_KevinDill/src)
include_directories(Controller_UI/src)
include_directories(external)
include_directories(external/SDL2)
include_directories(external/SDL2/include)
include_directories(external/SDL2_image)
include_directories(external/SDL2_image/include)
include_directories(external/SDL2_ttf)
include_directories(external/SDL2_ttf/include)
include_directories(Game/src)
include_directories(Interface/src)

add_executable(Project2
        Controller_AI_KevinDill/src/Controller_AI_KevinDill.cpp
        Controller_AI_KevinDill/src/Controller_AI_KevinDill.h
        Controller_UI/src/Controller_UI.cpp
        Controller_UI/src/Controller_UI.h
        external/SDL2/include/begin_code.h
        external/SDL2/include/close_code.h
        external/SDL2/include/SDL.h
        external/SDL2/include/SDL_assert.h
        external/SDL2/include/SDL_atomic.h
        external/SDL2/include/SDL_audio.h
        external/SDL2/include/SDL_bits.h
        external/SDL2/include/SDL_blendmode.h
        external/SDL2/include/SDL_clipboard.h
        external/SDL2/include/SDL_config.h
        external/SDL2/include/SDL_config_android.h
        external/SDL2/include/SDL_config_iphoneos.h
        external/SDL2/include/SDL_config_macosx.h
        external/SDL2/include/SDL_config_minimal.h
        external/SDL2/include/SDL_config_pandora.h
        external/SDL2/include/SDL_config_psp.h
        external/SDL2/include/SDL_config_windows.h
        external/SDL2/include/SDL_config_winrt.h
        external/SDL2/include/SDL_config_wiz.h
        external/SDL2/include/SDL_copying.h
        external/SDL2/include/SDL_cpuinfo.h
        external/SDL2/include/SDL_egl.h
        external/SDL2/include/SDL_endian.h
        external/SDL2/include/SDL_error.h
        external/SDL2/include/SDL_events.h
        external/SDL2/include/SDL_filesystem.h
        external/SDL2/include/SDL_gamecontroller.h
        external/SDL2/include/SDL_gesture.h
        external/SDL2/include/SDL_haptic.h
        external/SDL2/include/SDL_hints.h
        external/SDL2/include/SDL_joystick.h
        external/SDL2/include/SDL_keyboard.h
        external/SDL2/include/SDL_keycode.h
        external/SDL2/include/SDL_loadso.h
        external/SDL2/include/SDL_log.h
        external/SDL2/include/SDL_main.h
        external/SDL2/include/SDL_messagebox.h
        external/SDL2/include/SDL_mouse.h
        external/SDL2/include/SDL_mutex.h
        external/SDL2/include/SDL_name.h
        external/SDL2/include/SDL_opengl.h
        external/SDL2/include/SDL_opengl_glext.h
        external/SDL2/include/SDL_opengles.h
        external/SDL2/include/SDL_opengles2.h
        external/SDL2/include/SDL_opengles2_gl2.h
        external/SDL2/include/SDL_opengles2_gl2ext.h
        external/SDL2/include/SDL_opengles2_gl2platform.h
        external/SDL2/include/SDL_opengles2_khrplatform.h
        external/SDL2/include/SDL_pixels.h
        external/SDL2/include/SDL_platform.h
        external/SDL2/include/SDL_power.h
        external/SDL2/include/SDL_quit.h
        external/SDL2/include/SDL_rect.h
        external/SDL2/include/SDL_render.h
        external/SDL2/include/SDL_revision.h
        external/SDL2/include/SDL_rwops.h
        external/SDL2/include/SDL_scancode.h
        external/SDL2/include/SDL_sensor.h
        external/SDL2/include/SDL_shape.h
        external/SDL2/include/SDL_stdinc.h
        external/SDL2/include/SDL_surface.h
        external/SDL2/include/SDL_system.h
        external/SDL2/include/SDL_syswm.h
        external/SDL2/include/SDL_test.h
        external/SDL2/include/SDL_test_assert.h
        external/SDL2/include/SDL_test_common.h
        external/SDL2/include/SDL_test_compare.h
        external/SDL2/include/SDL_test_crc32.h
        external/SDL2/include/SDL_test_font.h
        external/SDL2/include/SDL_test_fuzzer.h
        external/SDL2/include/SDL_test_harness.h
        external/SDL2/include/SDL_test_images.h
        external/SDL2/include/SDL_test_log.h
        external/SDL2/include/SDL_test_md5.h
        external/SDL2/include/SDL_test_memory.h
        external/SDL2/include/SDL_test_random.h
        external/SDL2/include/SDL_thread.h
        external/SDL2/include/SDL_timer.h
        external/SDL2/include/SDL_touch.h
        external/SDL2/include/SDL_types.h
        external/SDL2/include/SDL_version.h
        external/SDL2/include/SDL_video.h
        external/SDL2/include/SDL_vulkan.h
        external/SDL2_image/include/SDL_image.h
        external/SDL2_ttf/include/SDL_ttf.h
        Game/src/Building.cpp
        Game/src/Building.h
        Game/src/CrashLoyal.cpp
        Game/src/Entity.cpp
        Game/src/Entity.h
        Game/src/Game.cpp
        Game/src/Game.h
        Game/src/Graphics.cpp
        Game/src/Graphics.h
        Game/src/HelperFunctions.h
        Game/src/Mob.cpp
        Game/src/Mob.h
        Game/src/Mob_Swordsman.h
        Game/src/Player.cpp
        Game/src/Player.h
        Interface/src/Constants.h
        Interface/src/EntityStats.cpp
        Interface/src/EntityStats.h
        Interface/src/iController.h
        Interface/src/iPlayer.cpp
        Interface/src/iPlayer.h
        Interface/src/Singleton.h
        Interface/src/Vec2.cpp
        Interface/src/Vec2.h)
